fix package json

--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "@yesnohub/sitaad-ts",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
+  "files": [
+    "/lib"
+  ],
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
   },
