--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@yesnohub/sitaad-ts",
-  "version": "0.0.13",
+  "version": "0.0.14",
   "description": "",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "build": "rm -rf ./lib && tsc -p ./tsconfig.json",
-    "release": "standard-version && git push --follow-tags && npm publish"
+    "release": " export $(cat .env | xargs) && standard-version && git push --follow-tags && npm publish"
   },
   "keywords": [],
   "author": "",
